# gigadevice-firmware-and-docs

GD32W51x/GD32W51x_RELEASE_V1.0.0/: CMakeLists.txt  MultiProject.eww  MultiProject.uvmpw  MultiProject_NS.eww  MultiProject_NS.uvmpw  gcc_build_ns.bat  release_notes.txt
GD32W51x/GD32W51x_RELEASE_V1.0.0/GD32W51x_Addon/KEIL/: GigaDevice.GD32W51x_DFP_1.0.0.pack
GD32W51x/GD32W51x_RELEASE_V1.0.0/MBL/platform/gdm32/: gd32w51x_it.c  gd32w51x_it.h
GD32W51x/GD32W51x_RELEASE_V1.0.0/MBL/platform/gdm32/armclang/: mbl_gdm32.sct  mbl_gdm32_ns.sct  mbl_startup_gdm32.s
GD32W51x/GD32W51x_RELEASE_V1.0.0/MBL/platform/gdm32/cmsis_core/: mbl_system_gdm32.c
GD32W51x/GD32W51x_RELEASE_V1.0.0/MBL/platform/gdm32/gcc/: mbl_gdm32_ns.ld  mbl_startup_gdm32.s
GD32W51x/GD32W51x_RELEASE_V1.0.0/MBL/platform/gdm32/iar/: mbl_gdm32.i  mbl_gdm32_ns.i  mbl_startup_gdm32.s
GD32W51x/GD32W51x_RELEASE_V1.0.0/MBL/project/: mbl_afterbuild.bat  mbl_afterbuild_ns.bat
GD32W51x/GD32W51x_RELEASE_V1.0.0/MBL/project/IAR/: Project_MBL.ewd  Project_MBL.ewp  Project_MBL_NS.ewd  Project_MBL_NS.ewp  mbl_prebuild.bat
GD32W51x/GD32W51x_RELEASE_V1.0.0/MBL/project/KEIL/: Project_MBL.uvoptx  Project_MBL.uvprojx  Project_MBL_NS.uvoptx  Project_MBL_NS.uvprojx  mbl.ini  mbl_ns.ini
GD32W51x/GD32W51x_RELEASE_V1.0.0/MBL/source/: mbl.c  mbl_dummy.c  mbl_image_validate.c  mbl_image_validate.h  mbl_includes.h  mbl_nsc_api.c  mbl_nsc_api.h  mbl_status.c  mbl_status.h  mbl_target_config.c  mbl_target_config.h
GD32W51x/GD32W51x_RELEASE_V1.0.0/MBL/source_ns/: CMakeLists.txt  mbl_image.h  mbl_ns.c  mbl_qspi_flash.c  mbl_qspi_flash.h  mbl_uart.c
GD32W51x/GD32W51x_RELEASE_V1.0.0/NSPE/: CMakeLists.txt
GD32W51x/GD32W51x_RELEASE_V1.0.0/NSPE/Example/EFUSE/: main.c  readme.txt
GD32W51x/GD32W51x_RELEASE_V1.0.0/NSPE/Example/IFRP/: gd32w51x_it.c  gd32w51x_it.h  ir_decode.h  main.c  readme.txt  systick.c
GD32W51x/GD32W51x_RELEASE_V1.0.0/NSPE/Example/WIFI_PORTING/: GD32w51x_FreeRTOS_MbedTLS_LWIP.uvoptx  GD32w51x_FreeRTOS_MbedTLS_LWIP.uvprojx  GD32w51x_FreeRTOS_ROM-MbedTLS_LWIP.uvoptx  GD32w51x_FreeRTOS_ROM-MbedTLS_LWIP.uvprojx  GD32w51x_RT-Thread_MbedTLS_LWIP.uvoptx  GD32w51x_RT-Thread_MbedTLS_LWIP.uvprojx  GD32w51x_RT-Thread_ROM-MbedTLS_LWIP.uvoptx  GD32w51x_RT-Thread_ROM-MbedTLS_LWIP.uvprojx  Project_FREERTOS_ROM-MbedTLS_LWIP.sct  Project_RT-Thread_MbedTLS_LWIP.sct  mbedtls_init.c  mbedtls_init.h  porting_console.c  porting_console.h  porting_init_rom.c  porting_main.c  porting_main.h  readme.txt  release_notes.txt  remove_lines.py
GD32W51x/GD32W51x_RELEASE_V1.0.0/NSPE/Firmware/CMSIS/: CMakeLists.txt
GD32W51x/GD32W51x_RELEASE_V1.0.0/NSPE/Firmware/GD32W51x_standard_peripheral/: CMakeLists.txt
GD32W51x/GD32W51x_RELEASE_V1.0.0/NSPE/Firmware/GD32W51x_wifi_driver/: CMakeLists.txt
GD32W51x/GD32W51x_RELEASE_V1.0.0/NSPE/Project/WIFI_IOT/: build_date.bat  nspe_afterbuild.bat  wifi_version.bat
GD32W51x/GD32W51x_RELEASE_V1.0.0/NSPE/Template/: gd32w51x_it.c  gd32w51x_it.h  main.c  readme.txt
GD32W51x/GD32W51x_RELEASE_V1.0.0/NSPE/Template/IAR_project/: Project.ewd  Project.ewp
GD32W51x/GD32W51x_RELEASE_V1.0.0/NSPE/Template/Keil_project/: Project.uvoptx  Project.uvprojx
GD32W51x/GD32W51x_RELEASE_V1.0.0/NSPE/Template_TrustZone/: Debug.ini  Project.eww  Project.uvmpw  readme.txt
GD32W51x/GD32W51x_RELEASE_V1.0.0/NSPE/Template_TrustZone/NSecure/: Project_NS.sct  gd32w51x_libopt.h  main.c
GD32W51x/GD32W51x_RELEASE_V1.0.0/NSPE/Template_TrustZone/Secure/: gd32w51x_flash_s.icf  gd32w51x_it.c  gd32w51x_it.h  gd32w51x_libopt.h  main.c
GD32W51x/GD32W51x_RELEASE_V1.0.0/NSPE/Utilities/: gd32w515p_eval.c  gd32w515p_eval.h
GD32W51x/GD32W51x_RELEASE_V1.0.0/NSPE/WIFI_IOT/: CMakeLists.txt
GD32W51x/GD32W51x_RELEASE_V1.0.0/NSPE/WIFI_IOT/FatFS/: CMakeLists.txt  fatfs.c  fatfs.h  wear_levelling_flash.c  wear_levelling_flash.h
GD32W51x/GD32W51x_RELEASE_V1.0.0/NSPE/WIFI_IOT/app/: CMakeLists.txt  app_cfg.h  atcmd.c  atcmd.h  atcmd_tcpip.c  atcmd_tcpip.h  atcmd_wifi.c  cmd_shell.c  cmd_shell.h  main.c  main.h
GD32W51x/GD32W51x_RELEASE_V1.0.0/NSPE/WIFI_IOT/bsp/: bsp_gd32w51x.c  bsp_inc.h  bsp_wlan.c  bsp_wlan.h  flash_api.c  flash_api.h  gd32_it.c  gd32_it.h  rf_efuse.c  rf_efuse.h  uart.c
GD32W51x/GD32W51x_RELEASE_V1.0.0/NSPE/WIFI_IOT/common/: _build_date.h  _wifi_version.h  wrapper_os.c
GD32W51x/GD32W51x_RELEASE_V1.0.0/NSPE/WIFI_IOT/demo/: ota_demo.c  ssl_client.c
GD32W51x/GD32W51x_RELEASE_V1.0.0/NSPE/WIFI_IOT/network/: CMakeLists.txt
GD32W51x/GD32W51x_RELEASE_V1.0.0/NSPE/WIFI_IOT/os/: CMakeLists.txt  wrapper_rtthread.c  wrapper_rtthread.h
GD32W51x/GD32W51x_RELEASE_V1.0.0/NSPE/WIFI_IOT/wifi/: wifi_management.c  wifi_netlink.c  wifi_netlink.h
GD32W51x/GD32W51x_RELEASE_V1.0.0/PROT/mbedtls_ns_callable/: mbedtls_nsc.c  mbedtls_nsc.h
GD32W51x/GD32W51x_RELEASE_V1.0.0/PROT/project/: prot_afterbuild.bat
GD32W51x/GD32W51x_RELEASE_V1.0.0/PROT/project/IAR/: Lib_Psacrypto.ewp  Project_PROT.ewd  Project_PROT.ewp  prot_prebuild.bat
GD32W51x/GD32W51x_RELEASE_V1.0.0/PROT/project/KEIL/: MultiProject_PROT.uvmpw  debug.ini
GD32W51x/GD32W51x_RELEASE_V1.0.0/PROT/trusted-firmware-m/: tfm.code-workspace
GD32W51x/GD32W51x_RELEASE_V1.0.0/ROM-EXPORT/: commit.template
GD32W51x/GD32W51x_RELEASE_V1.0.0/config/: config_gdm32.h  config_gdm32_ntz.h  platform_def.h
GD32W51x/GD32W51x_RELEASE_V1.0.0/scripts/: setup.bat  setup_daplink.bat  setup_jlink.bat
GD32W51x/GD32W51x_RELEASE_V1.0.0/scripts/certs/: arot-cert.pem  arot-key.pem  gen-arot.bat  gen-mbl.bat  gen-rot.bat  mbl-cert.pem  mbl-key.pem  rot-cert.pem  rot-key.pem  rot-key.txt
GD32W51x/GD32W51x_RELEASE_V1.0.0/scripts/cmake/: set_extensions.cmake  toolchain.cmake
GD32W51x/GD32W51x_RELEASE_V1.0.0/scripts/flms/: GD32W51x.FLM  GD32W51x_QSPI.FLM  GD32W51x_QSPI_S.FLM  GD32W51x_S.FLM  JLinkDevices.xml
GD32W51x/GD32W51x_RELEASE_V1.0.0/scripts/imgtool/: aestool.py  bin2array.py  download.py  gentool.py  hextool.py  imgtool.py  sysset.py
GD32W51x/GD32W51x_RELEASE_V1.0.0/scripts/imgtool/imglib/: image.py
GD32W51x/GD32W51x_RELEASE_V1.0.0/scripts/patch/: apply.py  patch.py  pyocd.diff
(+20185 files in other folders)
